Test for ports: Add conditional compilation for py_fir_init0()

--- a/.github/workflows/firmware.yml
+++ b/.github/workflows/firmware.yml
@@ -6,6 +6,7 @@ on:
       - 'v*.*.*'
     branches:    
       - 'master'
+      - 'openmv4p'
     paths:
       - '**'
       - '.github/workflows/*.yml'
@@ -37,19 +38,19 @@ jobs:
     strategy:
       matrix:
         target:
-          - OPENMV2
-          - OPENMV3
-          - OPENMV4
-          - OPENMV4P
-          - OPENMVPT
-          - OPENMV_RT1060
-          - OPENMV_AE3
-          - ARDUINO_PORTENTA_H7
-          - ARDUINO_GIGA
-          - ARDUINO_NICLA_VISION
+          # - OPENMV2
+          # - OPENMV3
+          # - OPENMV4
+          # - OPENMV4P
+          # - OPENMVPT
+          # - OPENMV_RT1060
+          # - OPENMV_AE3
+          # - ARDUINO_PORTENTA_H7
+          # - ARDUINO_GIGA
+          # - ARDUINO_NICLA_VISION
           - ARDUINO_NANO_RP2040_CONNECT
-          - ARDUINO_NANO_33_BLE_SENSE
-          - DOCKER
+          # - ARDUINO_NANO_33_BLE_SENSE
+          # - DOCKER
       fail-fast: false
     steps:
     - name: '⏳ Checkout repository'
