--- a/.github/workflows/firmware.yml
+++ b/.github/workflows/firmware.yml
@@ -6,6 +6,7 @@ on:
       - 'v*.*.*'
     branches:    
       - 'master'
+      - 'AzureA1'
     paths:
       - 'src/**'
       - '.github/workflows/*.yml'
@@ -28,7 +29,7 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        target: [OPENMV2, OPENMV3, OPENMV4, OPENMV4P, OPENMV4_PRO, PORTENTA, OPENMVPT, NICLAV, NANO33, ARDUINO_NANO_RP2040_CONNECT]
+        target: [WeActStudioSTM32H7xx]
       fail-fast: false
     steps:
     - name: '⏳ Checkout repository'
