--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "src/micropython"]
 	path = src/micropython
-	url = https://github.com/WeActTC/micropython.git
+	url = https://github.com/WeActStudio/micropython.git
 	branch = openmv
 [submodule "src/omv/modules/ulab"]
 	path = src/omv/modules/ulab
