--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "src/micropython"]
 	path = src/micropython
 	url = https://github.com/WeActStudio/openmv.git
-	branch = openmv
+	branch = WeActStudio
 [submodule "src/omv/modules/ulab"]
 	path = src/omv/modules/ulab
 	url = https://github.com/v923z/micropython-ulab.git
